--- a/thesis/rnaSeq/rnaSeq.tex
+++ b/thesis/rnaSeq/rnaSeq.tex
@@ -76,7 +76,7 @@
 				\hline
 			\end{tabular}
 			}
-			\caption[Samples and sequencing coverage.]{Samples used in this study, their infection rates and sequencing depth.}
+			\caption[Samples and RNA-Seq sequencing coverage]{Samples used in this study, their infection rates and sequencing depth.}
 			\label{tabSamples}
 		\end{table}
 
@@ -115,7 +115,7 @@
 				\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top}}}]{figure}[\FBwidth]{
 					\includegraphics[width=0.5\textwidth]{compare.pdf}
 				}{
-					\caption[Comparisons among studies quantifying cellular gene expression after HIV infection.]{For each pair of studies, the association between up- and down-regulation calls was measured for genes identified by both studies as differentially expressed (above the diagonal).  As another comparison, we also measured the agreement between studies for which genes were called differentially expressed regardless of direction (below the diagonal). The color scale shows the conservative (i.e.\  closest to 1) boundary of the confidence interval of the odds ratio with blue indicating a positive association and red a negative association between studies. For confidence intervals overlapping 1, the value was set to 1. Therefore all colored squares indicate significant associations.}	\label{figGenes}
+					\caption[Comparisons among studies quantifying cellular gene expression after HIV infection]{Comparisons among studies quantifying cellular gene expression after HIV infection. For each pair of studies, the association between up- and down-regulation calls was measured for genes identified by both studies as differentially expressed (above the diagonal).  As another comparison, we also measured the agreement between studies for which genes were called differentially expressed regardless of direction (below the diagonal). The color scale shows the conservative (i.e.\  closest to 1) boundary of the confidence interval of the odds ratio with blue indicating a positive association and red a negative association between studies. For confidence intervals overlapping 1, the value was set to 1. Therefore all colored squares indicate significant associations.}	\label{figGenes}
 				}
 		\end{figure}
 
@@ -131,7 +131,7 @@
 			\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top}}}]{figure}[\FBwidth]{
 				\includegraphics[width=0.5\textwidth]{compareMsig.pdf}
 			}{
-				\caption[Comparisons of the effect of HIV infection on cellular gene expression to additional studies comparing transcription in subsets of immune cells.]{The MSigDB database was used to extract 185 sets of differentially expressed genes from pairs of transcriptional profiling studies of immune cell subsets involving \cdFour{} T cells. For each pair of studies, we used Fisher's exact test to measure the association between up- and down-regulation calls for genes identified as differentially expressed in both our HIV study and the comparator immune subsets. A) The transcriptional profiles with strongest associations with changes observed in our study of \hivEight{} infection of primary T cells. Blue indicates an positive association between changes seen in HIV infected cells and the first immune subset (text colored blue) while red indicates a positive association with the second immune subset (text colored red). The color scale shows the conservative (i.e.\  closest to 1) boundary of the confidence interval of the odds ratio. For confidence intervals overlapping 1, the value was set to 1. Therefore all colored squares indicate significant associations. B) As in A, but showing the transcriptional profiles most strongly associated with changes observed in lymph node biopsies from acutely infected patients \citep{Li2009}. }
+				\caption[Comparisons of the effect of HIV infection on gene expression to studies comparing subsets of immune cells]{Comparisons of the effect of HIV infection on gene expression to studies comparing subsets of immune cells. The MSigDB database was used to extract 185 sets of differentially expressed genes from pairs of transcriptional profiling studies of immune cell subsets involving \cdFour{} T cells. For each pair of studies, we used Fisher's exact test to measure the association between up- and down-regulation calls for genes identified as differentially expressed in both our HIV study and the comparator immune subsets. A) The transcriptional profiles with strongest associations with changes observed in our study of \hivEight{} infection of primary T cells. Blue indicates an positive association between changes seen in HIV infected cells and the first immune subset (text colored blue) while red indicates a positive association with the second immune subset (text colored red). The color scale shows the conservative (i.e.\  closest to 1) boundary of the confidence interval of the odds ratio. For confidence intervals overlapping 1, the value was set to 1. Therefore all colored squares indicate significant associations. B) As in A, but showing the transcriptional profiles most strongly associated with changes observed in lymph node biopsies from acutely infected patients \citep{Li2009}. }
 				\label{figMsig}
 			}
 		\end{figure}
@@ -147,7 +147,7 @@
 		\begin{figure}
 			\centering
 				\includegraphics[width=\textwidth]{intronCombo.pdf}
-			\caption[Changes in the abundance of intronic regions with HIV infection.]{Expression of intronic and exonic regions was quantified as the proportion of reads mapping within the intron/exon out of the total reads mapping to the transcription units overlapping that intron/exon. A) Comparison of the ratios of expression between infected and uninfected replicates in exclusively intronic or exonic regions of transcription units. B) Reproducibility of intron retention between replicates. Each point quantifies the change in expression with HIV infection for a specific intronic region. The x-axis shows shows changes in gene activity accompanying infection for one set of replicates (Infected-1 and Infected-2 vs. Uninfected-1) and the y-axis shows the same data for different replicates (Infected-3 vs. Uninfected-2). C) Reproducibility of intron retention between studies. The plot is arranged as in B but with all data from our study combined on the x-axis and corresponding data from \citet{Chang2011} on the y-axis.}
+			\caption[Changes in the abundance of intronic regions with HIV infection]{Changes in the abundance of intronic regions with HIV infection. Expression of intronic and exonic regions was quantified as the proportion of reads mapping within the intron/exon out of the total reads mapping to the transcription units overlapping that intron/exon. A) Comparison of the ratios of expression between infected and uninfected replicates in exclusively intronic or exonic regions of transcription units. B) Reproducibility of intron retention between replicates. Each point quantifies the change in expression with HIV infection for a specific intronic region. The x-axis shows shows changes in gene activity accompanying infection for one set of replicates (Infected-1 and Infected-2 vs. Uninfected-1) and the y-axis shows the same data for different replicates (Infected-3 vs. Uninfected-2). C) Reproducibility of intron retention between studies. The plot is arranged as in B but with all data from our study combined on the x-axis and corresponding data from \citet{Chang2011} on the y-axis.}
 			%Retention of introns and activation of repeated sequence associated with HIV89.6 infection of primary T cells. A) The ratios of expression between infected and uninfected replicates in exclusively intronic or exonic regions of transcription units.  Comparison of representation of introns and exons in the infected and uninfected samples.  B) An example of intron retention in the cellular gene. } 
 			\label{figIntron}
 		\end{figure}
@@ -164,7 +164,7 @@
 				\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top}}}]{figure}[\FBwidth]{
 					\includegraphics[width=0.5\textwidth]{ltrCombo.pdf}
 				}{
-					\caption[Repeat categories enriched upon infection with HIV.]{A) The association of repeat regions differentially expressed after \hivEight{} infection of primary T cells observed for varying thresholds of differential expression. The threshold used to call a gene differentially expressed based on the Bayesian posterior median was varied and Fisher's exact test was used to assess whether any genomic repeats had a significant association with this differential expression. Note that only ERV-9 (annotated as HERV9-int in the RepeatMasker database) and it's corresponding long terminal repeat LTR12C were significantly associated with large changes in expression. B) Enrichment of repeat categories in regions differentially expressed (Bayesian 95\% credible interval $>1$) between HIV-infected and control \cdFour{} T cells. The repeated sequences are ordered on the x-axis by the extent of induction within each class, the y-axis shows the p-value for upregulation after infection. The dashed line indicates a Bonferroni corrected $p$ value of 0.05. (C) The proportion of human mapped reads that align within classes of genomic repeats for data from primary \cdFour{} T cells from this study and SupT1 cells from \citet{Chang2011}. A single read mapping multiple times to a given category was only counted once.}
+					\caption[Repeat categories enriched upon infection with HIV]{Repeat categories enriched upon infection with HIV. A) The association of repeat regions differentially expressed after \hivEight{} infection of primary T cells observed for varying thresholds of differential expression. The threshold used to call a gene differentially expressed based on the Bayesian posterior median was varied and Fisher's exact test was used to assess whether any genomic repeats had a significant association with this differential expression. Note that only ERV-9 (annotated as HERV9-int in the RepeatMasker database) and it's corresponding long terminal repeat LTR12C were significantly associated with large changes in expression. B) Enrichment of repeat categories in regions differentially expressed (Bayesian 95\% credible interval $>1$) between HIV-infected and control \cdFour{} T cells. The repeated sequences are ordered on the x-axis by the extent of induction within each class, the y-axis shows the p-value for upregulation after infection. The dashed line indicates a Bonferroni corrected $p$ value of 0.05. (C) The proportion of human mapped reads that align within classes of genomic repeats for data from primary \cdFour{} T cells from this study and SupT1 cells from \citet{Chang2011}. A single read mapping multiple times to a given category was only counted once.}
 					\label{figHervs}
 				}
 		\end{figure}
@@ -174,7 +174,7 @@
 		\begin{figure}
 			\centering
 				\includegraphics[width=\textwidth]{ltr12c.pdf}
-			\caption[Characteristics of LTR12C sequences associated with induction upon infection of primary T cells with \hivEight{}.]{  A) An alignment of the \threePrime{} end of the U3 region of repeats annotated as ERV-9 LTR12C. Each row is a LTR sequence and each column a base in that sequence colored by nucleotide identity. Three distinct classes are visible with a short, medium and long form. Mutations away from the consensus can also be seen. B)  The coefficients (points) and $\pm 1.96$ standard errors (horizontal lines) of a logistic regression comparing differential expression of LTR12C to the presence of MZF1 and NFY motifs, short/medium/long length alternate forms of the U3-R region, mutations away from the consensus for each length form and integration inside a transcription unit. The coefficient shown for mutations away from consensus is for a 10 mutation difference and the coefficient shown for NFY motifs is for a change of 5 additional motifs. All other coefficients are for binary values.}
+			\caption[Characteristics of LTR12C sequences associated with induction upon infection with \hivEight{}]{Characteristics of LTR12C sequences associated with induction upon infection of primary T cells with \hivEight{}.  A) An alignment of the \threePrime{} end of the U3 region of repeats annotated as ERV-9 LTR12C. Each row is a LTR sequence and each column a base in that sequence colored by nucleotide identity. Three distinct classes are visible with a short, medium and long form. Mutations away from the consensus can also be seen. B)  The coefficients (points) and $\pm 1.96$ standard errors (horizontal lines) of a logistic regression comparing differential expression of LTR12C to the presence of MZF1 and NFY motifs, short/medium/long length alternate forms of the U3-R region, mutations away from the consensus for each length form and integration inside a transcription unit. The coefficient shown for mutations away from consensus is for a 10 mutation difference and the coefficient shown for NFY motifs is for a change of 5 additional motifs. All other coefficients are for binary values.}
 			\label{figLtr12c}
 		\end{figure}
 
@@ -196,7 +196,7 @@
 				\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top}}}]{figure}[\FBwidth]{
 					\includegraphics[width=0.5\textwidth]{comboHiv.pdf}
 				}{
-					\caption[Transcription and splicing of the \hivEight{} RNA.]{  A) Junctions between HIV splice donors and acceptors observed in the RNA-Seq data. Acceptors are shown as the columns and donors as the rows with the coloring indicating the frequency of each pairing.   B) The relative abundance of all \hivEight{} transcripts as determined by a combination of PacBio sequencing \citep{Ocwieja2012} and Illumina sequencing. Message structures were generated by targeted long read single molecule sequencing, which allowed association of multiple splice junctions in single sequence reads. The Illumina short read sequencing allowed normalization of message abundances between size classes. The inferred HIV message population is shown colored by relative abundance.} 
+					\caption[Transcription and splicing of the \hivEight{} RNA]{Transcription and splicing of the \hivEight{} RNA. A) Junctions between HIV splice donors and acceptors observed in the RNA-Seq data. Acceptors are shown as the columns and donors as the rows with the coloring indicating the frequency of each pairing.   B) The relative abundance of all \hivEight{} transcripts as determined by a combination of PacBio sequencing \citep{Ocwieja2012} and Illumina sequencing. Message structures were generated by targeted long read single molecule sequencing, which allowed association of multiple splice junctions in single sequence reads. The Illumina short read sequencing allowed normalization of message abundances between size classes. The inferred HIV message population is shown colored by relative abundance.} 
 					\label{figHiv}
 				}
 		\end{figure}
@@ -227,7 +227,7 @@
 				\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top}}}]{figure}[\FBwidth]{
 					\includegraphics[width=0.5\textwidth]{chimeraCombo.pdf}
 				}{
-					\caption[Analysis of chimeric RNA sequences containing both human and HIV sequences.]{ A) The length of overlapping sequence (regions of complementarity potentially favoring chimera formation) matching both human and HIV at inferred chimeric junctions. The x-axis shows the length of the overlap and the y-axis shows the frequency of chimeric junctions with the indicated extent of overlap.  B) Chromosomal distribution of uniquely mapping HIV integration sites from the same infections of primary T cells and comparison to uniquely mapping human sequences in chimeric reads observed in RNA-Seq. Note that the mitochondrial genome, denoted as M, has no authentic integration sites but does have extensive matches to chimeric junctions found in the RNA-Seq data. C) Counts of the location in the HIV genome of the HIV-human junctions in filtered chimeric reads.} % CHECK ONLY BEST HIV MATCH]]
+					\caption[Chimeric RNA sequences containing both human and HIV sequences]{Analysis of chimeric RNA sequences containing both human and HIV sequences. A) The length of overlapping sequence (regions of complementarity potentially favoring chimera formation) matching both human and HIV at inferred chimeric junctions. The x-axis shows the length of the overlap and the y-axis shows the frequency of chimeric junctions with the indicated extent of overlap.  B) Chromosomal distribution of uniquely mapping HIV integration sites from the same infections of primary T cells and comparison to uniquely mapping human sequences in chimeric reads observed in RNA-Seq. Note that the mitochondrial genome, denoted as M, has no authentic integration sites but does have extensive matches to chimeric junctions found in the RNA-Seq data. C) Counts of the location in the HIV genome of the HIV-human junctions in filtered chimeric reads.} % CHECK ONLY BEST HIV MATCH]]
 					\label{figChimera}
 				}
 		\end{figure}
