--- a/thesis/rnaSeq/rnaSeq.tex
+++ b/thesis/rnaSeq/rnaSeq.tex
@@ -13,6 +13,13 @@
 \chapter{Gene activity in primary T cells infected with \hivEight{}: intron retention and induction of distinctive genomic repeats}
 \label{chapRnaSeq}
 
+\textBox{This chapter is under review as:\\
+	\citeBox{Sherrill-MixUnderReview}
+
+	KE Ocwieja performed the infections and sequencing. I analyzed the data. KE Ocwieja, FD Bushman and I planned the overall study. I produced the figures. FD Bushman and I wrote the paper. 
+%	Additional files are available at \url{http://www.retrovirology.com/content/10/1/90/additional}
+}
+
 \section{Abstract}
 	Background: HIV infection has been reported to alter cellular gene activity, but published studies have commonly assayed transformed cell lines and lab-adapted HIV strains, yielding inconsistent results. Here we carried out a deep RNA-Seq analysis of primary human T cells infected with the low passage HIV isolate \hivEight{}. 
 
