--- a/thesis/rnaSeq/rnaSeq.tex
+++ b/thesis/rnaSeq/rnaSeq.tex
@@ -23,7 +23,7 @@
 \section{Abstract}
 	Background: HIV infection has been reported to alter cellular gene activity, but published studies have commonly assayed transformed cell lines and lab-adapted HIV strains, yielding inconsistent results. Here we carried out a deep RNA-Seq analysis of primary human T cells infected with the low passage HIV isolate \hivEight{}. 
 
-	Results: Seventeen percent of cellular genes showed altered activity 48 hours after infection. In a meta-analysis including four other studies, our data differed from studies of transcription after HIV infection of cell lines but showed more parallels with infections of primary cells. We found a global trend toward retention of introns after infection, suggestive of a novel cellular response to infection. \hivEight{} infection was also associated with activation of human endogenous retroviruses (HERVs) and several retrotransposons, of interest as possible novel antigens that could serve as vaccine targets. The most highly activated group of HERVs was a subset of the ERV-9, a group not reported previously to be induced by HIV. Analysis showed that activation was associated with a particular variant of an ERV-9 long terminal repeat that contains an indel near the U3-R border. These data also allowed quantification of $>70$ splice forms of the \hivEight{} RNA and specified the main types of chimeric \hivEight{}-host RNAs. Comparison to \nIntegrations{} integration site sequences from the same infected cells allowed quantification of authentic versus artifactual chimeric reads (0.1\% of the total), showing that \fivePrime{} read-in, splicing out of \hivEight{} from the D4 donor and \threePrime{} read-through were the most common \hivEight{}-host cell chimeric RNA forms. 
+	Results: Seventeen percent of cellular genes showed altered activity 48 hours after infection. In a meta-analysis including four other studies, our data differed from studies of transcription after HIV infection of cell lines but showed more parallels with infections of primary cells. We found a global trend toward retention of introns after infection, suggestive of a novel cellular response to infection. \hivEight{} infection was also associated with activation of human endogenous retroviruses (HERVs) and several retrotransposons, of interest as possible novel antigens that could serve as vaccine targets. The most highly activated group of HERVs was a subset of the ERV-9, a group not reported previously to be induced by HIV. Analysis showed that activation was associated with a particular variant of an ERV-9 long terminal repeat that contains an indel near the U3-R border. These data also allowed quantification of \textgreater{}70 splice forms of the \hivEight{} RNA and specified the main types of chimeric \hivEight{}-host RNAs. Comparison to \nIntegrations{} integration site sequences from the same infected cells allowed quantification of authentic versus artifactual chimeric reads (0.1\% of the total), showing that \fivePrime{} read-in, splicing out of \hivEight{} from the D4 donor and \threePrime{} read-through were the most common \hivEight{}-host cell chimeric RNA forms. 
 
 	Conclusions: Analysis of RNA abundance after infection of primary T cells with the low passage \hivEight{} isolate disclosed multiple novel features of HIV-host interactions, notably intron retention and induction of transcription of distinctive retrotransposons and endogenous retroviruses.
 
@@ -60,7 +60,7 @@
 
 		 We used a Bayesian estimate of the ratio of expression in uninfected and HIV infected samples to account for sampling effort and differing expression in genomic regions. We modeled the observed counts as a binomial distribution with a flat beta prior ($\alpha=1,\beta=1$) separately for uninfected and infected samples. We then Monte Carlo sampled the two posterior distribution to estimate the posterior distribution of the ratio. For introns, the number of binomial successes was set to the number of reads mapped to the intron and the number of trials was the total number of reads observed in the genes overlapping that intron. For repeat regions, the number of binomial successes was set to the number of reads mapped to that region and the number of trials was the total number of reads mapped to the human genome.
 
-		To estimate determinants of LTR12C expression, we fit a logistic regression for which LTR12C increased in expression with \hivEight{} infection (95\% Bayesian credible interval $>1$) on to characteristics of the LTR12C regions. We extracted all the LTR12C regions from the human genome and determined the U3-R boundary using a ends free alignment of the previously reported U3-R border \citep{LaMantia1991,LaMantia1992,Plant2001,Ling2002,Yu2005} against the sequences. Regions less than 1,000 bases long were discarded. Previous studies disagreed about the location of the LTR12C transcription start site and it appears that transcription may start in several places \citep{LaMantia1992,Plant2001}. We took the \fivePrime{} most site that had agreement between studies (transcription starting with TGGCAACCC). We split the sequences into short, medium and long length classes based on an indel about 70 bases upstream from the transcription start site. For each length class, we generated a consensus sequence and counted the Levenshtein edit distance between the consensuses and each corresponding sequence. We also counted the number of NFY motifs (CCAAT or ATTGG), MZF1 motifs (GTGGGGA) and GATA2 motifs (GATA or TATC) in the entire U3 region or checked in any of the three motifs was present in the 150 bases upstream of the TSS. A final regression model was selected using stepwise regression with an AIC cutoff of 5. For display, the LTR12C sequences were aligned with MUSCLE \citep{Edgar2004}.
+		To estimate determinants of LTR12C expression, we fit a logistic regression for which LTR12C increased in expression with \hivEight{} infection (95\% Bayesian credible interval \textgreater{}1) on to characteristics of the LTR12C regions. We extracted all the LTR12C regions from the human genome and determined the U3-R boundary using a ends free alignment of the previously reported U3-R border \citep{LaMantia1991,LaMantia1992,Plant2001,Ling2002,Yu2005} against the sequences. Regions less than 1,000 bases long were discarded. Previous studies disagreed about the location of the LTR12C transcription start site and it appears that transcription may start in several places \citep{LaMantia1992,Plant2001}. We took the \fivePrime{} most site that had agreement between studies (transcription starting with TGGCAACCC). We split the sequences into short, medium and long length classes based on an indel about 70 bases upstream from the transcription start site. For each length class, we generated a consensus sequence and counted the Levenshtein edit distance between the consensuses and each corresponding sequence. We also counted the number of NFY motifs (CCAAT or ATTGG), MZF1 motifs (GTGGGGA) and GATA2 motifs (GATA or TATC) in the entire U3 region or checked in any of the three motifs was present in the 150 bases upstream of the TSS. A final regression model was selected using stepwise regression with an AIC cutoff of 5. For display, the LTR12C sequences were aligned with MUSCLE \citep{Edgar2004}.
 
 		The abundance of the HIV RNA size classes was estimated as described in Additional File 5. These estimates were then multiplied by the within size class proportions estimated by \citet{Ocwieja2012} using PacBio sequencing of \hivEight{} to yield proportions over 78 measured \hivEight{} RNAs.
 		
@@ -88,7 +88,7 @@
 		\end{table}
 
 	\subsection{Changes in gene activity in primary T cells upon infection with \hivEight{}} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		Changes in host cell gene expression have been reported during HIV infection \citep{Corbeil2001,Mitchell2003,Rotger2010,Lefebvre2011,Imbeault2012,Mohammadi2013} and differences in expression have been observed associated with the stage \citep{Li2009} and progression \citep{Rotger2011} of disease. Here we observed significant changes in gene expression (false discovery rate corrected $q<0.01$) in 3,142 genes, 17.1\% of expressed cellular genes (Additional file 1). The genes with most extreme increases, all $>6\times$ fold higher, during HIV infection included IFI44L, RSAD2, HMOX1, MX1, USP18, IGJ, OAS1, CMPK2, DDX60, IFI44, IFI6, IFNG and CCL3. All of these have been reported to be involved in innate immunity \citep{Breuer2013} or are interferon inducible \citep{Rusinova2013}, highlighting a strong innate immune response in the cells studied. Genes with the largest decreases, all $>3\times$ fold lower, were GNG4, GPA33, IL6R, CCR8, RORC, AFF2 and CCR2.
+		Changes in host cell gene expression have been reported during HIV infection \citep{Corbeil2001,Mitchell2003,Woelk2004,Hyrcza2007,Wu2008,Rotger2010,Smith2010,Lefebvre2011,Chang2011,Imbeault2012,Mohammadi2013,Peng2014} and differences in expression have been observed associated with the stage \citep{Li2009} and progression \citep{Rotger2011} of disease. Here we observed significant changes in gene expression (false discovery rate corrected $q<0.01$) in 3,142 genes, 17.1\% of expressed cellular genes (Additional file 1). The genes with most extreme increases, all \textgreater{}6$\times$ fold higher, during HIV infection included IFI44L, RSAD2, HMOX1, MX1, USP18, IGJ, OAS1, CMPK2, DDX60, IFI44, IFI6, IFNG and CCL3. All of these have been reported to be involved in innate immunity \citep{Breuer2013} or are interferon inducible \citep{Rusinova2013}, highlighting a strong innate immune response in the cells studied. Genes with the largest decreases, all \textgreater{}3$\times$ fold lower, were GNG4, GPA33, IL6R, CCR8, RORC, AFF2 and CCR2.
 
 		Many gene ontology categories were significantly enriched for differentially expressed genes (Additional file 2). Notably upregulated with infection were genes involved in apoptosis, immune responses and cytokine production (all $q<10^{-4}$) and down-regulated were genes involved in viral gene expression, nonsense-mediated decay and translation elongation and termination (all $q<10^{-19}$). These changes suggest that the cells responded to HIV infection with the induction of inflammatory, interferon regulated and apoptotic responses, patterns posited from several previous studies \citep{Corbeil2001,delaFuente2002,Woelk2004,Hyrcza2007,Wu2008,Smith2010,Chang2011,Lefebvre2011,Imbeault2012,Mohammadi2013,Chang2013}. Several genes were activated that were characteristic of other hematopoietic lineages, e.g.\  hemoglobin $\beta$, CD8, CD20 and CD117, while several \cdFour{} T cell specific genes, e.g.\  CD4 and CD3, were downregulated, potentially consistent with de-differentiation of infected and bystander cells.  We return to this point in the discussion. 
 	
@@ -171,7 +171,7 @@
 				\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top}}}]{figure}[\FBwidth]{
 					\includegraphics[width=0.5\textwidth]{ltrCombo.pdf}
 				}{
-					\caption[Repeat categories enriched upon infection with HIV]{Repeat categories enriched upon infection with HIV. A) The association of repeat regions differentially expressed after \hivEight{} infection of primary T cells observed for varying thresholds of differential expression. The threshold used to call a gene differentially expressed based on the Bayesian posterior median was varied and Fisher's exact test was used to assess whether any genomic repeats had a significant association with this differential expression. Note that only ERV-9 (annotated as HERV9-int in the RepeatMasker database) and it's corresponding long terminal repeat LTR12C were significantly associated with large changes in expression. B) Enrichment of repeat categories in regions differentially expressed (Bayesian 95\% credible interval $>1$) between HIV-infected and control \cdFour{} T cells. The repeated sequences are ordered on the x-axis by the extent of induction within each class, the y-axis shows the p-value for upregulation after infection. The dashed line indicates a Bonferroni corrected $p$ value of 0.05. (C) The proportion of human mapped reads that align within classes of genomic repeats for data from primary \cdFour{} T cells from this study and SupT1 cells from \citet{Chang2011}. A single read mapping multiple times to a given category was only counted once.}
+					\caption[Repeat categories enriched upon infection with HIV]{Repeat categories enriched upon infection with HIV. A) The association of repeat regions differentially expressed after \hivEight{} infection of primary T cells observed for varying thresholds of differential expression. The threshold used to call a gene differentially expressed based on the Bayesian posterior median was varied and Fisher's exact test was used to assess whether any genomic repeats had a significant association with this differential expression. Note that only ERV-9 (annotated as HERV9-int in the RepeatMasker database) and it's corresponding long terminal repeat LTR12C were significantly associated with large changes in expression. B) Enrichment of repeat categories in regions differentially expressed (Bayesian 95\% credible interval \textgreater{}1) between HIV-infected and control \cdFour{} T cells. The repeated sequences are ordered on the x-axis by the extent of induction within each class, the y-axis shows the p-value for upregulation after infection. The dashed line indicates a Bonferroni corrected $p$ value of 0.05. (C) The proportion of human mapped reads that align within classes of genomic repeats for data from primary \cdFour{} T cells from this study and SupT1 cells from \citet{Chang2011}. A single read mapping multiple times to a given category was only counted once.}
 					\label{figHervs}
 				}
 		\end{figure}
@@ -181,7 +181,7 @@
 		\begin{figure}
 			\centering
 				\includegraphics[width=\textwidth]{ltr12c.pdf}
-			\caption[Characteristics of LTR12C sequences associated with induction upon infection with \hivEight{}]{Characteristics of LTR12C sequences associated with induction upon infection of primary T cells with \hivEight{}.  A) An alignment of the \threePrime{} end of the U3 region of repeats annotated as ERV-9 LTR12C. Each row is a LTR sequence and each column a base in that sequence colored by nucleotide identity. Three distinct classes are visible with a short, medium and long form. Mutations away from the consensus can also be seen. B)  The coefficients (points) and $\pm 1.96$ standard errors (horizontal lines) of a logistic regression comparing differential expression of LTR12C to the presence of MZF1 and NFY motifs, short/medium/long length alternate forms of the U3-R region, mutations away from the consensus for each length form and integration inside a transcription unit. The coefficient shown for mutations away from consensus is for a 10 mutation difference and the coefficient shown for NFY motifs is for a change of 5 additional motifs. All other coefficients are for binary values.}
+			\caption[Characteristics of LTR12C sequences associated with induction upon infection with \hivEight{}]{Characteristics of LTR12C sequences associated with induction upon infection of primary T cells with \hivEight{}.  A) An alignment of the \threePrime{} end of the U3 region of repeats annotated as ERV-9 LTR12C. Each row is a LTR sequence and each column a base in that sequence colored by nucleotide identity. Three distinct classes are visible with a short, medium and long form. Mutations away from the consensus can also be seen. B)  The coefficients (points) and $\pm$1.96 standard errors (horizontal lines) of a logistic regression comparing differential expression of LTR12C to the presence of MZF1 and NFY motifs, short/medium/long length alternate forms of the U3-R region, mutations away from the consensus for each length form and integration inside a transcription unit. The coefficient shown for mutations away from consensus is for a 10 mutation difference and the coefficient shown for NFY motifs is for a change of 5 additional motifs. All other coefficients are for binary values.}
 			\label{figLtr12c}
 		\end{figure}
 
@@ -191,6 +191,24 @@
 		Over 47,257 single reads spanned previously reported HIV splice junctions, allowing a quantitative assessment of donor and acceptor utilization (Figure \ref{figHiv}A). As expected from previous studies \citep{Purcell1993,Ocwieja2012}, the most abundant junctions were D1-A5 and D4-A7.  We confirmed the use of unusual splice acceptors A8c and A5a, previously reported in \hivEight{} \citep{Ocwieja2012}. In our data, we also see a higher abundance of D1-A1 and D1-A2 splice junctions than might be expected \citep{Purcell1993,Ocwieja2012}, although previous studies reported proportional abundance within size classes, making comparisons between size classes uncertain. % and observed that A8c is the most commonly used acceptor for the D4 donor that forms the 2 kb and 1 kb size class.
 
 		A \threePrime{} bias is apparent in our sequencing data (Additional file 5). This could be due to the poly-A capture step of the protocol where any break in the RNA would result in distal \fivePrime{} sequences being lost \citep{Lahens2014}. We used sequence reads from the large unspliced HIV intron 1 to measure this bias using a regression of the $\log$ of the number of fragments with a \fivePrime{}-most end starting at a given position against the distance of that position from the viral polyadenylation site, yielding an estimated probability of breakage of 0.021\% per base (Additional file 5). Given this rate of termination, there is only a 14\% chance of reaching the \fivePrime{} end of the 9171 nt unspliced HIV genome (\((1-0.00021)^{9171}\)). 
+
+
+		\begin{figure}
+				\centering
+				\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top}}}]{figure}[\FBwidth]{
+					\includegraphics[width=0.6\textwidth]{additionalFile5.pdf}
+				}{
+					\caption[Estimating relative abundance of \hivEight{} message size classes using RNA-Seq data]{
+						Estimating relative abundance of \hivEight{} message size classes using RNA-Seq data.\\
+						A) RNA-Seq coverage of the \hivEight{} genome for the replicates in this study. Each replicate is indicated by a different color. The HIV genome is shown on the x-axis and the number of reads that aligned to each position is shown on the y-axis. Black line indicates the 0.021\% coverage decrease per base distance from the \threePrime{} end of the mRNA estimated from a least squares fit on the read counts in the first intron.\\
+						B) Diagram of the segments of the \hivEight{} RNA present in each of 9 kb, 4 kb, 2 kb and 1 kb size class. \\
+						C) The proportion of reads mapped to each of the segments of the \hivEight{} genome shown in B adjusted by the length of the segment. Each replicate is shown by a different color.\\
+						D) Corrected representation of RNA segments from the different size classes. Because cDNA synthesis was primed from the polyA tail, more \threePrime{} sequences are recovered preferentially. Using the bias estimate from A, we adjusted each genome segment by the inverse of the bias predicted based on its distance from the \threePrime{} end of the mRNA. Corrected proportions for the indicated RNA segments are shown colored by replicate. \\
+						E) The proportion of each size class was inferred using the estimates in D by calculating the difference between segments. Replicates are indicated by color.
+				}
+					\label{figCalculations}
+				}
+		\end{figure}
 
 		\citet{Ocwieja2012} determined the relative abundance of \hivEight{} of similarly sized transcripts using PacBio single molecule sequencing, but were not able to estimate the relative abundance of all transcripts due to a sequencing bias favoring shorter transcripts.  For this reason, relative abundances could only be specified within message size classes (i.e.\  the 4 kb, 2 kb and unexpectedly a 1 kb size class as well) and the overall quantitative abundances were unknown.  The RNA-Seq data reported here are unable to determine complete transcript abundance because the short read length does not allow reconstruction of multiply spliced messages but do permit estimation of size class abundances after correcting for \threePrime{} bias (Additional file 5). Thus the PacBio data reported by \citet{Ocwieja2012} and the Illumina data reported here can be combined together to determine complete relative abundance of all \hivEight{} transcripts (Figure \ref{figHiv}B). 
 
@@ -217,12 +235,12 @@
 
 		Chimeric messages composed of HIV and cellular RNA sequences can be formed by cellular gene transcription reading into the integrated provirus, by HIV transcription reading out through the viral polyadenylation site or by splicing between human and viral splice sites. In our filtered data, the predominant forms appear to be derived from reading through the HIV polyadenylation signal into the surrounding DNA (78\%), splicing out of the viral D4 splice donor to join to human slice acceptors (17\%) and reading into the HIV \fivePrime{} LTR from human sequence (4.0\%) (Figure \ref{figChimera}C). No splice site other than D4 had more than two chimeric reads observed. 
 		
-		The filtered chimeric reads had many traits consistent with biological chimera formation. The reads containing HIV D4 joined to human sequences had the characteristics expected of splicing---72.1\% of the chimeric junctions mapped to known human acceptors and 96.1\% mapped to a location immediately preceded by the AG consensus of human mRNA acceptors. The reads containing the \fivePrime{} or \threePrime{} LTR border were almost exclusively (93\%) found in transcription units, with odds of being in a gene 2.3-fold (95\% CI: 1.6--$3.2\times$) higher than integration sites from the same sample. The \fivePrime{} or \threePrime{} chimeras were also more likely to be located in an exon than integration sites even after excluding any integration or chimera not located in a transcription unit (odds ratio: $2.1\times$, 95\% CI: 1.6--$2.6\times$).
+		The filtered chimeric reads had many traits consistent with biological chimera formation. The reads containing HIV D4 joined to human sequences had the characteristics expected of splicing---72.1\% of the chimeric junctions mapped to known human acceptors and 96.1\% mapped to a location immediately preceded by the AG consensus of human mRNA acceptors. The reads containing the \fivePrime{} or \threePrime{} LTR border were almost exclusively (93\%) found in transcription units, with odds of being in a gene 2.3-fold (95\% CI: 1.6--3.2$\times$) higher than integration sites from the same sample. The \fivePrime{} or \threePrime{} chimeras were also more likely to be located in an exon than integration sites even after excluding any integration or chimera not located in a transcription unit (odds ratio: 2.1$\times$, 95\% CI: 1.6--2.6$\times$).
 		%Reads containing a junction of the HIV \threePrime{} end with human sequence appear to be more common than reads containing a junction of the HIV \fivePrime{} end but this conclusion is tentative due to \threePrime{} sequencing bias and uncertainty of strand of origin.
 
 		%these chimeric sequence would be originating from and where they would be polyadenylated. In addition, since HIV transcripts form a large proportion of mRNA transcriptions and at most a handful of genes in each infected cell could be situated appropriately to even be able to read into an integrated provirus, these differences in abundance might be biased by the opportunity for polymerase to even encounter the sequences involved. Proviral expression would likely be lower in vivo in cells that don't quickly succumb to infection or in cells transduced by lentiviral vectors. 
 
-		 We next compared whether the human and viral segments of chimeric reads agreed or disagreed in orientation (i.e.\  strand transcribed) for reads with the human portion mapped within annotated transcription units. The sequencing technique used here does not preserve strand information, but we can check whether the strand of a sequence read agrees or disagrees with the annotated gene strand and compare this to the observed strand of the HIV portion of the read. We found a strong association between the orientation of the human and HIV portions of chimeric reads within \threePrime{} and \fivePrime{} chimeras (odds ratio: $6.2\times$, 95\% CI: 3.9--$10.2\times$). This highly significant enrichment of HIV and human genes in the same orientation (Fisher's exact test $p<10^{-15}$) might indicate that antisense HIV RNA is rapidly degraded by a response to double-stranded RNA or that polymerases oriented in opposing directions interfere with one another during elongation. Chimeras involving HIV splice donor D4 were even more highly enriched for matching orientations (odds ratio: $52.5\times$, 95\% CI: 12.1--$307\times$) suggesting that pairing with human splice acceptors may add an additional constraint on the orientation of D4 chimeric reads.
+		 We next compared whether the human and viral segments of chimeric reads agreed or disagreed in orientation (i.e.\  strand transcribed) for reads with the human portion mapped within annotated transcription units. The sequencing technique used here does not preserve strand information, but we can check whether the strand of a sequence read agrees or disagrees with the annotated gene strand and compare this to the observed strand of the HIV portion of the read. We found a strong association between the orientation of the human and HIV portions of chimeric reads within \threePrime{} and \fivePrime{} chimeras (odds ratio: 6.2$\times$, 95\% CI: 3.9--10.2$\times$). This highly significant enrichment of HIV and human genes in the same orientation (Fisher's exact test $p<10^{-15}$) might indicate that antisense HIV RNA is rapidly degraded by a response to double-stranded RNA or that polymerases oriented in opposing directions interfere with one another during elongation. Chimeras involving HIV splice donor D4 were even more highly enriched for matching orientations (odds ratio: 52.5$\times$, 95\% CI: 12.1--307$\times$) suggesting that pairing with human splice acceptors may add an additional constraint on the orientation of D4 chimeric reads.
 
 		 %We found a strong association between the orientation of the HIV and human portions of chimeric reads with the odds of the agreement between the two portions 6.3-times higher (95\% CI: 3.9--$10.2\times$) than the odds of being in opposite orientations. 
 
@@ -242,7 +260,7 @@
 
 
 \section{Discussion}
-	Here we used RNA-Seq to analyze mRNA accumulation and splicing in primary T cells infected with the low passage isolate \hivEight{}.  We did not carry out dense time series analysis, compare different human cell donors or compare different perturbations of the infections---instead, we focused on generating a dense data set at a single time point.  We analyzed replicate infected cell and control samples to allow discrimination of within-condition versus between-condition variation and assessed differences using a series of bioinformatic approaches. Many previous studies have used microarray technology or RNA-Seq to study gene activity in HIV-infected cells \citep{Corbeil2001,delaFuente2002,Mitchell2003,Woelk2004,Hyrcza2007,Wu2008,Smith2010,Chang2011,Lefebvre2011,Imbeault2012,Mohammadi2013,Peng2014}, usually analyzing infections of transformed cell lines or laboratory adapted strains of HIV-1. Here we present what is to our knowledge the deepest RNA-Seq data set reported for infection in primary T cells using a low passage HIV isolate (\hivEight{}). This data set was paired with a set of \nIntegrations{} unique integration site sequences extracted from the same infections, which were critical to our ability to quality control chimeric reads. An advantage of studies using cell lines and laboratory adapted strains is that often a high percent of cell infection can be achieved, whereas in this study we achieved only around $\approximately30\%$ infection.  However, we report distinctive features of the transcriptional response not seen in studies of HIV infections in cell lines.  Novel in this study are 1) identification of intron retention as a consequence of HIV infection, 2) the finding of activation of ERV-9/LTR12C after HIV infection,  3) generation of a quantitative account of the structures and abundances of over 70 \hivEight{} messages and 4) clarification of the predominant types of HIV-host transcriptional chimeras.  These findings are discussed below.
+	Here we used RNA-Seq to analyze mRNA accumulation and splicing in primary T cells infected with the low passage isolate \hivEight{}.  We did not carry out dense time series analysis, compare different human cell donors or compare different perturbations of the infections---instead, we focused on generating a dense data set at a single time point.  We analyzed replicate infected cell and control samples to allow discrimination of within-condition versus between-condition variation and assessed differences using a series of bioinformatic approaches. Many previous studies have used microarray technology or RNA-Seq to study gene activity in HIV-infected cells \citep{Corbeil2001,delaFuente2002,Mitchell2003,Woelk2004,Hyrcza2007,Wu2008,Smith2010,Chang2011,Lefebvre2011,Imbeault2012,Mohammadi2013,Peng2014}, usually analyzing infections of transformed cell lines or laboratory adapted strains of HIV-1. Here we present what is to our knowledge the deepest RNA-Seq data set reported for infection in primary T cells using a low passage HIV isolate (\hivEight{}). This data set was paired with a set of \nIntegrations{} unique integration site sequences extracted from the same infections, which were critical to our ability to quality control chimeric reads. An advantage of studies using cell lines and laboratory adapted strains is that often a high percent of cell infection can be achieved, whereas in this study we achieved only $\approximately$30\% infection.  However, we report distinctive features of the transcriptional response not seen in studies of HIV infections in cell lines.  Novel in this study are 1) identification of intron retention as a consequence of HIV infection, 2) the finding of activation of ERV-9/LTR12C after HIV infection,  3) generation of a quantitative account of the structures and abundances of over 70 \hivEight{} messages and 4) clarification of the predominant types of HIV-host transcriptional chimeras.  These findings are discussed below.
 
 	Broad changes in host cell mRNA abundances were evident after infection, with over 17\% of expressed genes changing significantly in activity. Changes included expected response to viral infection, apoptosis and T cell activation. Although it is not possible here to separate the response of infected and bystander cells, this study highlights the drastic changes in cellular expression caused by HIV-1 infection. In a meta-analysis including four previously published studies, no gene was detected as differentially expressed in all five studies and only a handful of genes appeared in four out of five studies. Further analysis showed that expression changes appear to be cell type specific, raising concerns that studies using cell lines may not fully reflect host cell responses in \emph{in vivo} infections. 
 
@@ -265,30 +283,30 @@
 \section{Availability of supporting data}
 	RNA-Seq reads from this study are available at the Sequence Read Archive under accession number SRP055981. The integration site data is available at the Sequence Read Archive under accession number SRP057555.
 
-\section{Author's contributions}
-	KEO performed the infections and sequencing. SS-M analyzed the data. SS-M, KEO and FDB planned the overall study, and SS-M and FDB wrote the paper. All authors read and approved the final manuscript.
+%\section{Author's contributions}
+	%KEO performed the infections and sequencing. SS-M analyzed the data. SS-M, KEO and FDB planned the overall study, and SS-M and FDB wrote the paper. All authors read and approved the final manuscript.
 
 \section{Acknowledgements}
   We would like to thank the University of Pennsylvania Center for AIDS Research (P30 AI045008) for preparation of viral stocks and isolation of primary \cdFour{} T cells; Ronald G. Collman and members of the Bushman laboratory for reagents, helpful discussion and technical expertise. This work was funded by NIH grant R01 AI052845, the HIV Immune Networks Team (HINT) consortium P01 AI090935 and NRSA computational genomics training grant T32 HG000046.  
 
-\clearpage %only for draft to prevent scrambling of figures and additional files
-\section{Additional Files}
-  \subsection{Additional file 1 ---  Analysis of genes differentially expressed during \hivEight{} infection of primary \cdFour{} T cells}
-		Output from CuffLinks analysis of the RNA-Seq data organized in a csv file with columns UCSC gene ID, gene symbol, status of test, FPKM in uninfected and infected samples, the $\log_2$ fold change, test statistic and false discovery rate adjusted $p$-value.
+%\clearpage %only for draft to prevent scrambling of figures and additional files
+%\section{Additional Files}
+  %\subsection{Additional file 1 ---  Analysis of genes differentially expressed during \hivEight{} infection of primary \cdFour{} T cells}
+		%Output from CuffLinks analysis of the RNA-Seq data organized in a csv file with columns UCSC gene ID, gene symbol, status of test, FPKM in uninfected and infected samples, the $\log_2$ fold change, test statistic and false discovery rate adjusted $p$-value.
 
 
-  \subsection{Additional file 2 --- Analysis of Gene Ontology categories associated with differential expression during \hivEight{} infection of primary \cdFour{} T cells}
-		Counts of differentially expressed genes for each Gene Ontology category. Columns are the name of the category, the numbers of genes differentially up- and downregulated or not significantly changed and odds ratios and $p$-values from Fisher's exact tests.
+  %\subsection{Additional file 2 --- Analysis of Gene Ontology categories associated with differential expression during \hivEight{} infection of primary \cdFour{} T cells}
+		%Counts of differentially expressed genes for each Gene Ontology category. Columns are the name of the category, the numbers of genes differentially up- and downregulated or not significantly changed and odds ratios and $p$-values from Fisher's exact tests.
 
-  \subsection{Additional file 4 --- Genes called as up- or downregulated by studies of expression during HIV infection}
-    Genes called as differentially expressed in the five studies analyzed in the meta-analysis of differential expression with HIV infection. Columns are the study, the gene name(s) and whether the differential expression was up or down.
+  %\subsection{Additional file 4 --- Genes called as up- or downregulated by studies of expression during HIV infection}
+    %Genes called as differentially expressed in the five studies analyzed in the meta-analysis of differential expression with HIV infection. Columns are the study, the gene name(s) and whether the differential expression was up or down.
 
-  \subsection{Additional file 5 --- Estimating relative abundance of \hivEight{} message size classes using RNA-Seq data}
-		A) RNA-Seq coverage of the \hivEight{} genome for the replicates in this study. Each replicate is indicated by a different color. The HIV genome is shown on the x-axis and the number of reads that aligned to each position is shown on the y-axis. Black line indicates the 0.021\% coverage decrease per base distance from the \threePrime{} end of the mRNA estimated from a least squares fit on the read counts in the first intron.
-		B) Diagram of the segments of the \hivEight{} RNA present in each of 9 kb, 4 kb, 2 kb and 1 kb size class. 
-		C) The proportion of reads mapped to each of the segments of the \hivEight{} genome shown in B adjusted by the length of the segment. Each replicate is shown by a different color.
-		D) Corrected representation of RNA segments from the different size classes. Because cDNA synthesis was primed from the polyA tail, more \threePrime{} sequences are recovered preferentially. Using the bias estimate from A, we adjusted each genome segment by the inverse of the bias predicted based on its distance from the \threePrime{} end of the mRNA. Corrected proportions for the indicated RNA segments are shown colored by replicate. 
-		E) The proportion of each size class was inferred using the estimates in D by calculating the difference between segments. Replicates are indicated by color.
+  %\subsection{Additional file 5 --- Estimating relative abundance of \hivEight{} message size classes using RNA-Seq data}
+		%A) RNA-Seq coverage of the \hivEight{} genome for the replicates in this study. Each replicate is indicated by a different color. The HIV genome is shown on the x-axis and the number of reads that aligned to each position is shown on the y-axis. Black line indicates the 0.021\% coverage decrease per base distance from the \threePrime{} end of the mRNA estimated from a least squares fit on the read counts in the first intron.
+		%B) Diagram of the segments of the \hivEight{} RNA present in each of 9 kb, 4 kb, 2 kb and 1 kb size class. 
+		%C) The proportion of reads mapped to each of the segments of the \hivEight{} genome shown in B adjusted by the length of the segment. Each replicate is shown by a different color.
+		%D) Corrected representation of RNA segments from the different size classes. Because cDNA synthesis was primed from the polyA tail, more \threePrime{} sequences are recovered preferentially. Using the bias estimate from A, we adjusted each genome segment by the inverse of the bias predicted based on its distance from the \threePrime{} end of the mRNA. Corrected proportions for the indicated RNA segments are shown colored by replicate. 
+		%E) The proportion of each size class was inferred using the estimates in D by calculating the difference between segments. Replicates are indicated by color.
 		
 
 \end{document}
