--- a/thesis/rnaSeq/rnaSeq.tex
+++ b/thesis/rnaSeq/rnaSeq.tex
@@ -62,7 +62,7 @@
 
 		To estimate determinants of LTR12C expression, we fit a logistic regression for which LTR12C increased in expression with \hivEight{} infection (95\% Bayesian credible interval \textgreater{}1) on to characteristics of the LTR12C regions. We extracted all the LTR12C regions from the human genome and determined the U3-R boundary using a ends free alignment of the previously reported U3-R border \citep{LaMantia1991,LaMantia1992,Plant2001,Ling2002,Yu2005} against the sequences. Regions less than 1,000 bases long were discarded. Previous studies disagreed about the location of the LTR12C transcription start site and it appears that transcription may start in several places \citep{LaMantia1992,Plant2001}. We took the \fivePrime{} most site that had agreement between studies (transcription starting with TGGCAACCC). We split the sequences into short, medium and long length classes based on an indel about 70 bases upstream from the transcription start site. For each length class, we generated a consensus sequence and counted the Levenshtein edit distance between the consensuses and each corresponding sequence. We also counted the number of NFY motifs (CCAAT or ATTGG), MZF1 motifs (GTGGGGA) and GATA2 motifs (GATA or TATC) in the entire U3 region or checked in any of the three motifs was present in the 150 bases upstream of the TSS. A final regression model was selected using stepwise regression with an AIC cutoff of 5. For display, the LTR12C sequences were aligned with MUSCLE \citep{Edgar2004}.
 
-		The abundance of the HIV RNA size classes was estimated as described in Additional File 5. These estimates were then multiplied by the within size class proportions estimated by \citet{Ocwieja2012} using PacBio sequencing of \hivEight{} to yield proportions over 78 measured \hivEight{} RNAs.
+		The abundance of the HIV RNA size classes was estimated as described in Figure \ref{figCalculations}. These estimates were then multiplied by the within size class proportions estimated by \citet{Ocwieja2012} using PacBio sequencing of \hivEight{} to yield proportions over 78 measured \hivEight{} RNAs.
 		
 
 \section{Results}
@@ -190,7 +190,7 @@
 
 		Over 47,257 single reads spanned previously reported HIV splice junctions, allowing a quantitative assessment of donor and acceptor utilization (Figure \ref{figHiv}A). As expected from previous studies \citep{Purcell1993,Ocwieja2012}, the most abundant junctions were D1-A5 and D4-A7.  We confirmed the use of unusual splice acceptors A8c and A5a, previously reported in \hivEight{} \citep{Ocwieja2012}. In our data, we also see a higher abundance of D1-A1 and D1-A2 splice junctions than might be expected \citep{Purcell1993,Ocwieja2012}, although previous studies reported proportional abundance within size classes, making comparisons between size classes uncertain. % and observed that A8c is the most commonly used acceptor for the D4 donor that forms the 2 kb and 1 kb size class.
 
-		A \threePrime{} bias is apparent in our sequencing data (Additional file 5). This could be due to the poly-A capture step of the protocol where any break in the RNA would result in distal \fivePrime{} sequences being lost \citep{Lahens2014}. We used sequence reads from the large unspliced HIV intron 1 to measure this bias using a regression of the $\log$ of the number of fragments with a \fivePrime{}-most end starting at a given position against the distance of that position from the viral polyadenylation site, yielding an estimated probability of breakage of 0.021\% per base (Additional file 5). Given this rate of termination, there is only a 14\% chance of reaching the \fivePrime{} end of the 9171 nt unspliced HIV genome (\((1-0.00021)^{9171}\)). 
+		A \threePrime{} bias is apparent in our sequencing data (Figure \ref{figCalculations}). This could be due to the poly-A capture step of the protocol where any break in the RNA would result in distal \fivePrime{} sequences being lost \citep{Lahens2014}. We used sequence reads from the large unspliced HIV intron 1 to measure this bias using a regression of the $\log$ of the number of fragments with a \fivePrime{}-most end starting at a given position against the distance of that position from the viral polyadenylation site, yielding an estimated probability of breakage of 0.021\% per base (Figure \ref{figCalculations}). Given this rate of termination, there is only a 14\% chance of reaching the \fivePrime{} end of the 9171 nt unspliced HIV genome (\((1-0.00021)^{9171}\)). 
 
 
 		\begin{figure}
@@ -210,7 +210,7 @@
 				}
 		\end{figure}
 
-		\citet{Ocwieja2012} determined the relative abundance of \hivEight{} of similarly sized transcripts using PacBio single molecule sequencing, but were not able to estimate the relative abundance of all transcripts due to a sequencing bias favoring shorter transcripts.  For this reason, relative abundances could only be specified within message size classes (i.e.\  the 4 kb, 2 kb and unexpectedly a 1 kb size class as well) and the overall quantitative abundances were unknown.  The RNA-Seq data reported here are unable to determine complete transcript abundance because the short read length does not allow reconstruction of multiply spliced messages but do permit estimation of size class abundances after correcting for \threePrime{} bias (Additional file 5). Thus the PacBio data reported by \citet{Ocwieja2012} and the Illumina data reported here can be combined together to determine complete relative abundance of all \hivEight{} transcripts (Figure \ref{figHiv}B). 
+		\citet{Ocwieja2012} determined the relative abundance of \hivEight{} of similarly sized transcripts using PacBio single molecule sequencing, but were not able to estimate the relative abundance of all transcripts due to a sequencing bias favoring shorter transcripts.  For this reason, relative abundances could only be specified within message size classes (i.e.\  the 4 kb, 2 kb and unexpectedly a 1 kb size class as well) and the overall quantitative abundances were unknown.  The RNA-Seq data reported here are unable to determine complete transcript abundance because the short read length does not allow reconstruction of multiply spliced messages but do permit estimation of size class abundances after correcting for \threePrime{} bias (Figure \ref{figCalculations}). Thus the PacBio data reported by \citet{Ocwieja2012} and the Illumina data reported here can be combined together to determine complete relative abundance of all \hivEight{} transcripts (Figure \ref{figHiv}B). 
 
 	   The most abundant HIV mRNAs were the unspliced HIV genome (37.6\%), a transcript encoding Nef (D1-A5-D4-A7: 15.5\%), two 1 kb size class transcripts (D1-A5-D4-A8c: 10.6\%, D1-A8c: 4.9\%) and two Rev-encoding transcripts (D1-A4c-D4-A7: 4.2\%,D1-A4b-D4-A7: 3.1\%). The function of this large amount of 1 kb transcript is unknown. These two 1 kb transcripts do not appear to encode significant open reading frames although other 1 kb transcripts can encode a Rev-Nef fusion \citep{Ocwieja2012}. 
 
